# unity-momo-auxiliary-Translator

./: .gitignore  LICENSE  PrivateGameTranslator.spec  README.en.md  README.md  build_gui.ps1  main.py  main_gui.py  pyproject.toml
docs/: USAGE.en.md  USAGE.md  用户手册.md
src/game_translator/: __init__.py  analyzer.py  app_paths.py  cache_store.py  cli.py  config_templates.py  gui.py  gui_launcher.py  installer.py  models.py  runtime.py  services.py  settings_store.py  translation_bridge.py
tests/: test_analyzer.py  test_cache_store.py  test_config_templates.py  test_gui_helpers.py  test_installer.py  test_settings_store.py
